--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+.ValidatorForm{
+  display: flex;
+  padding: 0 10%;
+}
+
+.preloader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-image: url('./assets/preloader.gif');
+  background-repeat: no-repeat;
+  background-color: #FFF;
+  background-position: center;
+}
